# wallpaper-shuffler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: autostart.rs  main.rs  monitors.rs  settings_ui.rs  tray.rs  wallpaper.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  model.rs  playlist.rs  scheduler.rs
docs/superpowers/specs/: 2026-06-14-wallpaper-shuffler-design.md
