[package]
name = "wallpaper-shuffler-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallpaper-shuffler"
path = "src/main.rs"

[dependencies]
wallpaper-shuffler-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
rand = "0.8"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Registry",
  "Win32_Graphics_Gdi",
] }
native-windows-gui = "1"
native-windows-derive = "1"
